--- a/src/component/Bottle/Bottle.css
+++ b/src/component/Bottle/Bottle.css
@@ -11,11 +11,10 @@
     padding: 10px;
     border-radius: 10px;
 } */
-.bottle img{
+.bottleC img{
     width: 200px;
-
 }
-.bottle {
+.bottleC {
       border: 4px solid transparent;
       padding: 20px;
       border-radius: 12px;
